# obsidian-umbra

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.yaml.example  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: configuration.md  manual-setup.md  models.md  phases.md  releasing.md  troubleshooting.md
examples/: README.md  plato_cave_records.tsv  umbra-demo-config.yaml
examples/after/: 01-08-2024.md  01-11-2024.md  01-15-2024.md  01-22-2024.md  01-28-2024.md  02-03-2024.md  02-09-2024.md  02-16-2024.md  02-20-2024.md  02-26-2024.md  03-04-2024.md  03-11-2024.md  03-19-2024.md  03-25-2024.md  04-02-2024.md  04-15-2024.md  04-29-2024.md  05-10-2024.md  05-22-2024.md  06-07-2024.md  06-20-2024.md  07-08-2024.md  Reading List.md
examples/after/Concepts/: Aletheia.md  Allegory of the Cave.md  Anamnesis.md  Divided Line.md  Form of the Good.md  Forms.md
examples/after/Greek Thinkers/: Aristotle.md  Parmenides.md  Plato.md  Socrates.md
examples/after/Philosophy/: Dialectic.md  Epistemology.md  Metaphysics.md  Socratic Method.md
examples/after/Sources/: Annas Platonic Ethics.md  Murdoch Sovereignty of Good.md  OpenAlex Citations.md  Reeve Translation Notes.md
examples/after/Texts/: Meno.md  Phaedo.md  Republic.md  Theaetetus.md
examples/after/Thesis/: Chapter Outlines.md  Defense Prep.md
examples/after/umbra/: NOTE_INDEX.md  annas-platonic-ethics-book-review-2024-02-03.md  annas-platonic-ethics-book-review.md  aristotle-third-man-argument-2024-01-11.md  aristotle-third-man-argument.md  birdie-birthday-30-years-2024-07-08.md  birdie-birthday-30-years.md  cave-allegory-emotional-tonality-2024-02-20.md  cave-allegory-emotional-tonality.md  cave-allegory-stages-2024-01-08.md  cave-allegory-stages.md  cave-as-method-philosophy-2024-02-09.md  cave-as-method-philosophy.md  cave-as-therapy-chapter-3-2024-04-29.md  cave-as-therapy-chapter-3.md  cave-as-therapy-orientation-2024-06-07.md  cave-as-therapy-orientation.md  cave-exit-vs-digital-exit-analogy-2024-05-10.md  cave-exit-vs-digital-exit-analogy.md  cave-framing-epistemic-trust-2024-05-22.md  cave-framing-epistemic-trust.md  cave-model-science-truth-2024-02-16.md  cave-model-science-truth.md  cave-political-vs-epistemic-2024-01-08.md  cave-political-vs-epistemic.md  cave-prisoners-social-media-analogy-2024-05-10.md  cave-prisoners-social-media-analogy.md  cave-prisoners-violence-attention.md  (+85 more)
examples/before/: 01-08-2024.md  01-11-2024.md  01-15-2024.md  01-22-2024.md  01-28-2024.md  02-03-2024.md  02-09-2024.md  02-16-2024.md  02-20-2024.md  02-26-2024.md  03-04-2024.md  03-11-2024.md  03-19-2024.md  03-25-2024.md  04-02-2024.md  04-15-2024.md  04-29-2024.md  05-10-2024.md  05-22-2024.md  06-07-2024.md  06-20-2024.md  07-08-2024.md  Reading List.md
scripts/: generate_plato_vault.py  organize_into_folders.py  strip_date_wikilinks.py
src/umbra/: __init__.py  cli.py  common.py  config.py  daily_splitter.py  keyword_linker.py  semantic_backlinks.py  synonym_linker.py
(+24 files in other folders)
