[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-umbra"
dynamic = ["version"]
description = "Local LLM-powered Zettelkasten pipeline for Obsidian — daily note splitter, semantic backlinks, keyword linker, synonym clustering."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jamey O'Neill" }]
requires-python = ">=3.10"
keywords = [
    "obsidian", "zettelkasten", "knowledge-management", "second-brain",
    "llm", "local-llm", "llama-cpp", "qwen", "hdbscan",
    "sentence-transformers", "wikilinks", "markdown",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24,<3.0",
    "llama-cpp-python>=0.3.0",
    "model2vec>=0.3.0",
    "sentence-transformers>=3.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
# GPU clustering (Phase 4). Install via RAPIDS conda for best results.
gpu = [
    "cupy-cuda12x",
    # cuml is NOT pip-installable from the default index. See docs/troubleshooting.md.
]
dev = [
    "build>=1.0",
    "twine>=4.0",
    "pytest>=7",
    "ruff>=0.1",
]

[project.scripts]
umbra = "umbra.cli:main"

[project.urls]
Homepage = "https://github.com/jimnoneill/obsidian-umbra"
Documentation = "https://github.com/jimnoneill/obsidian-umbra#readme"
Changelog = "https://github.com/jimnoneill/obsidian-umbra/blob/main/CHANGELOG.md"
Issues = "https://github.com/jimnoneill/obsidian-umbra/issues"
Source = "https://github.com/jimnoneill/obsidian-umbra"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "umbra.__version__" }
